Paralax overflow fix

--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -20,6 +20,7 @@
         align-items: middle;
         place-items: center;
         height: 100vh;
+        overflow: hidden;
         h1 {
           padding: 10px;
     
